# app-registrar

./: .gitignore  AGENTS.md  FRAMEWORK_GOTCHAS.md  GOTCHAS_SUMMARY.txt  LICENSE  README.md  README_GOTCHAS.md  install.sh  nautilus_extension.py  pyproject.toml  raw_requirements.md  uninstall.sh
.github/workflows/: snap.yml
app_registrar/: __init__.py  __main__.py  constants.py  desktop_entry.py  detail_view.py  main.py  registration_dialog.py  settings_manager.py  settings_panel.py  utils.py  window.py
snap/: snapcraft.yaml
snap/gui/: app-registrar.desktop
snap/local/: launcher.sh
